[gd_scene load_steps=66 format=2]

[ext_resource path="res://enemy/shoot_enemy.gd" type="Script" id=1]
[ext_resource path="res://art/enemy/harpoon/move/1.png" type="Texture" id=2]
[ext_resource path="res://art/enemy/harpoon/move/5.png" type="Texture" id=3]
[ext_resource path="res://art/enemy/harpoon/move/4.png" type="Texture" id=4]
[ext_resource path="res://art/enemy/harpoon/move/2.png" type="Texture" id=5]
[ext_resource path="res://art/enemy/harpoon/move/7.png" type="Texture" id=6]
[ext_resource path="res://art/enemy/harpoon/move/6.png" type="Texture" id=7]
[ext_resource path="res://art/enemy/harpoon/move/3.png" type="Texture" id=8]
[ext_resource path="res://art/enemy/harpoon/move/8.png" type="Texture" id=9]
[ext_resource path="res://art/enemy/harpoon/move/9.png" type="Texture" id=10]
[ext_resource path="res://art/enemy/harpoon/death/2.png" type="Texture" id=11]
[ext_resource path="res://art/enemy/harpoon/death/4.png" type="Texture" id=12]
[ext_resource path="res://art/enemy/harpoon/death/3.png" type="Texture" id=13]
[ext_resource path="res://art/enemy/harpoon/death/5.png" type="Texture" id=14]
[ext_resource path="res://art/enemy/harpoon/death/1.png" type="Texture" id=15]
[ext_resource path="res://art/enemy/tranq/death/3.png" type="Texture" id=16]
[ext_resource path="res://art/enemy/tranq/idle/4.png" type="Texture" id=17]
[ext_resource path="res://art/enemy/tranq/idle/6.png" type="Texture" id=18]
[ext_resource path="res://art/enemy/tranq/idle/8.png" type="Texture" id=19]
[ext_resource path="res://art/enemy/tranq/death/1.png" type="Texture" id=20]
[ext_resource path="res://art/enemy/tranq/idle/9.png" type="Texture" id=21]
[ext_resource path="res://art/enemy/tranq/idle/2.png" type="Texture" id=22]
[ext_resource path="res://art/enemy/tranq/idle/5.png" type="Texture" id=23]
[ext_resource path="res://art/enemy/tranq/idle/3.png" type="Texture" id=24]
[ext_resource path="res://art/enemy/tranq/idle/1.png" type="Texture" id=25]
[ext_resource path="res://art/enemy/tranq/idle/7.png" type="Texture" id=26]
[ext_resource path="res://art/enemy/tranq/death/2.png" type="Texture" id=27]
[ext_resource path="res://art/enemy/tranq/move/8.png" type="Texture" id=28]
[ext_resource path="res://art/enemy/tranq/move/7.png" type="Texture" id=29]
[ext_resource path="res://art/enemy/tranq/move/9.png" type="Texture" id=30]
[ext_resource path="res://art/enemy/tranq/death/5.png" type="Texture" id=31]
[ext_resource path="res://art/enemy/tranq/move/1.png" type="Texture" id=32]
[ext_resource path="res://art/enemy/tranq/move/6.png" type="Texture" id=33]
[ext_resource path="res://art/enemy/tranq/move/4.png" type="Texture" id=34]
[ext_resource path="res://art/enemy/tranq/move/2.png" type="Texture" id=35]
[ext_resource path="res://art/enemy/tranq/move/3.png" type="Texture" id=36]
[ext_resource path="res://art/enemy/tranq/move/5.png" type="Texture" id=37]
[ext_resource path="res://art/enemy/tranq/death/4.png" type="Texture" id=38]
[ext_resource path="res://art/enemy/ultrasonic/death/1.png" type="Texture" id=39]
[ext_resource path="res://art/enemy/ultrasonic/idle/9.png" type="Texture" id=40]
[ext_resource path="res://art/enemy/ultrasonic/idle/4.png" type="Texture" id=41]
[ext_resource path="res://art/enemy/ultrasonic/idle/3.png" type="Texture" id=42]
[ext_resource path="res://art/enemy/ultrasonic/idle/7.png" type="Texture" id=43]
[ext_resource path="res://art/enemy/ultrasonic/death/2.png" type="Texture" id=44]
[ext_resource path="res://art/enemy/ultrasonic/idle/5.png" type="Texture" id=45]
[ext_resource path="res://art/enemy/ultrasonic/idle/6.png" type="Texture" id=46]
[ext_resource path="res://art/enemy/ultrasonic/death/4.png" type="Texture" id=47]
[ext_resource path="res://art/enemy/ultrasonic/death/3.png" type="Texture" id=48]
[ext_resource path="res://art/enemy/ultrasonic/idle/1.png" type="Texture" id=49]
[ext_resource path="res://art/enemy/ultrasonic/death/5.png" type="Texture" id=50]
[ext_resource path="res://art/enemy/ultrasonic/idle/2.png" type="Texture" id=51]
[ext_resource path="res://art/enemy/ultrasonic/idle/8.png" type="Texture" id=52]
[ext_resource path="res://art/enemy/ultrasonic/move/1.png" type="Texture" id=53]
[ext_resource path="res://art/enemy/ultrasonic/move/2.png" type="Texture" id=54]
[ext_resource path="res://art/enemy/ultrasonic/move/4.png" type="Texture" id=55]
[ext_resource path="res://art/enemy/ultrasonic/move/5.png" type="Texture" id=56]
[ext_resource path="res://art/enemy/ultrasonic/move/6.png" type="Texture" id=57]
[ext_resource path="res://art/enemy/ultrasonic/move/3.png" type="Texture" id=58]
[ext_resource path="res://art/enemy/ultrasonic/move/9.png" type="Texture" id=59]
[ext_resource path="res://art/enemy/ultrasonic/move/8.png" type="Texture" id=60]
[ext_resource path="res://art/enemy/ultrasonic/move/7.png" type="Texture" id=61]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": false,
"name": "harpoon_death",
"speed": 15.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 30 ) ],
"loop": true,
"name": "tranq_move",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "harpoon_move",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 44 ), ExtResource( 48 ), ExtResource( 47 ), ExtResource( 50 ) ],
"loop": false,
"name": "ultrasonic_death",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 17 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 26 ), ExtResource( 19 ), ExtResource( 21 ) ],
"loop": true,
"name": "tranq_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "harpoon_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 51 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 43 ), ExtResource( 52 ), ExtResource( 40 ) ],
"loop": true,
"name": "ultrasonic_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ), ExtResource( 54 ), ExtResource( 58 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 59 ) ],
"loop": true,
"name": "ultrasonic_move",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 27 ), ExtResource( 16 ), ExtResource( 38 ), ExtResource( 31 ) ],
"loop": false,
"name": "tranq_death",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 104.537

[sub_resource type="Animation" id=3]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="enemy" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.487686, -0.487671 )
frames = SubResource( 1 )
animation = "ultrasonic_idle"
frame = 6
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 7.78852, -10.9099 )
shape = SubResource( 2 )

[node name="cooldown_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="cc_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="bullet_container" type="Node" parent="."]

[node name="anim_player" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 3 )
anims/death = SubResource( 4 )

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 72.4196, -31.9345 )
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="cc_timer" to="." method="_on_cc_timer_timeout"]
